<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#999999"
    tools:context=".LongRangeMissileEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtLRMFacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facing"
                android:textAlignment="center"
                android:textColor="#ED000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLRMFacingLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFacingSelection"
                    android:text="@string/facing_left"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnLRMFacingCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFacingSelection"
                    android:text="@string/facing_center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnLRMFacingRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFacingSelection"
                    android:text="@string/facing_right"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtLRMSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/size"
                android:textAlignment="center"
                android:textColor="#ED000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLRMSize5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/LRM5"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnLRMSize10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/LRM10"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnLRMSize15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/LRM15"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnLRMSize20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/LRM20"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbxLRMArtemis4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="artemisNarcSelection"
                        android:text="@string/ArtIVBox" />

                    <CheckBox
                        android:id="@+id/cbxLRMArtemis5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="artemisNarcSelection"
                        android:text="@string/ArtVBox" />

                    <CheckBox
                        android:id="@+id/cbxLRMNarc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="artemisNarcSelection"
                        android:text="@string/narcBox" />

                    <CheckBox
                        android:id="@+id/cbxLRMStreak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="streakSelection"
                        android:text="@string/streakBox" />

                    <CheckBox
                        android:id="@+id/cbxLRMAMS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/amsBox" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cbxLRMECM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ECMBox"
                        android:visibility="invisible" />

                    <CheckBox
                        android:id="@+id/cbxLRMAngel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AngelBox"
                        android:visibility="invisible" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnLRMManualRoll"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="80dp"
                android:onClick="buttonManualClusterHits"
                android:text="@string/manual_roll" />

            <Button
                android:id="@+id/btnLRMAutoRoll"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="25dp"
                android:onClick="buttonAutomaticClusterHits"
                android:text="@string/calculate" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>