<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#999999"
    tools:context=".MediumRangeMissileEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMRMFacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facing"
                android:textAlignment="center"
                android:textColor="#ED000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMRMFacingLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFacingSelection"
                    android:text="@string/facing_left"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMRMFacingCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFacingSelection"
                    android:text="@string/facing_center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMRMFacingRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFacingSelection"
                    android:text="@string/facing_right"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtMRMSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/size"
                android:textAlignment="center"
                android:textColor="#ED000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMRMSize10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/MRM10"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMRMSize20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/MRM20"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMRMSize30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/MRM30"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnMRMSize40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonWeaponSelection"
                    android:text="@string/MRM40"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbxMRMApollo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkboxApolloSelection"
                    android:text="@string/ApolloBox" />

                <CheckBox
                    android:id="@+id/cbxMRMECM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ECMBox"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbxMRMAMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/amsBox" />

            </LinearLayout>

            <Button
                android:id="@+id/btnMRMManualRoll"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="80dp"
                android:layout_weight="1"
                android:onClick="buttonManualClusterHits"
                android:text="@string/manual_roll" />

            <Button
                android:id="@+id/btnMRMAutoRoll"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:onClick="buttonAutomaticClusterHits"
                android:text="@string/calculate" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>